[package]
name = "inclusive-or"
description = "A type equivalent to `(Option<T>, Option<U>)` where the `(None, None)` case is unconstructable"
version = "0.0.1"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2021"
repository = "https://github.com/kaleidawave/inclusive-or"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
